objects/LLC_BI__DocuSign_Template__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Data_Mapping__c</fullName>
        <description>The field contains the definition of how content from SalesForce will be mapped to the DocuSign document form fields.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Mapping</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Doc_Man_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is manually populated. It identifies the Document Manager Class associated with DocuSign Template.</description>
        <label>Document Manager Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__DocClass__c.LLC_BI__DocType__c</field>
                <operation>equals</operation>
                <valueField>$Source.LLC_BI__Doc_Man_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>DocuSign Templates</relationshipLabel>
        <relationshipName>DocuSign_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Doc_Man_Tab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is manually populated. It identifies the Document Manager Tab associated with DocuSign Template.</description>
        <label>Document Manager Tab</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__DocTab__c.LLC_BI__docManager__c</field>
                <operation>equals</operation>
                <valueField>$Source.LLC_BI__Doc_Man__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>DocuSign Templates</relationshipLabel>
        <relationshipName>DocuSign_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Doc_Man_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is manually populated. It identifies the Document Manager Type associated with DocuSign Template.</description>
        <label>Document Manager Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__DocType__c.LLC_BI__docTab__c</field>
                <operation>equals</operation>
                <valueField>$Source.LLC_BI__Doc_Man_Tab__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>DocuSign Templates</relationshipLabel>
        <relationshipName>DocuSign_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Doc_Man__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is manually populated. It identifies the Document Manager associated with DocuSign Template.</description>
        <label>Document Manager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>DocuSign Templates</relationshipLabel>
        <relationshipName>DocuSign_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Enforce_Masking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a required field that enables administrators to mask sensitive data. By default, the value is false.</description>
        <label>Enforce Masking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Object_Filter__c</fullName>
        <description>The fully qualified report name that will determine if the template will be displayed for a specific object.  The report is used define the criteria that must be met for the report to be displayed.  If the field is not specified the template will be displayed for all objects of the specified type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Object_Type__c</fullName>
        <description>The fully qualified name of the object associated with the template (For example &apos;LLC_BI_Loan__c&apos; or &apos;Account&apos;)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <description>Define the relationship that should be used when the document is focused on a related entity.

For example if the template is associated with the Account object and the document content focus on a specific Contact that is associated with the Account the field should be set to &apos;Contacts&apos;. This will result in the user being presented with an option to select the Contact when generating the document from the template.

Examples on the Account object:
- Contacts
- Contacts.Owner

Examples on the Loan object:
- LLC_BI__Legal_Entities__r.LLC_BI__Account__r</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Id__c</fullName>
        <description>The template ID assigned by DocuSign.

For example: 40DD7F3F-8662-4EF9-AE97-AE75959408A8</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DocuSign Template</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Object_Type__c</columns>
        <columns>LLC_BI__Relationship__c</columns>
        <columns>LLC_BI__Filter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>